--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ github_username: Ilona-a-k
 
 # Build settings
 markdown: kramdown
-theme: minimal-mistakes-jekyll
-
+theme: minima
 
 # Minimal Mistakes settings
 minimal_mistakes_skin: "air" # "default", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
