--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ github_username: Ilona-a-k
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: air
 
 author:
   name             : "Ilona Kalinina"
