--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,1 +1,13 @@
 main:
+  - title: "Home"
+    url: "/"
+  - title: "About"
+    url: "/#about"
+  - title: "Experience"
+    url: "/#experience"
+  - title: "Projects"
+    url: "/#projects"
+  - title: "Education"
+    url: "/#education"
+  - title: "Contact"
+    url: "/#contact"
