Enable required Jekyll plugins

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,13 @@ github_username: Ilona-a-k
 # Build settings
 markdown: kramdown
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jemoji
+  - jekyll-gist
+  - jekyll-include-cache
 
 author:
   name             : "Ilona Kalinina"
